added alt text to images

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
             <div class="col-xs-6 text-center">
                 <div class="panel panel-default">
-                    <img class="gemstone" id="gem-0" src="assets/images/if_Cushion_2647513.png">
-                    <img class="gemstone" id="gem-1" src="assets/images/if_Emerald_2647511.png">
-                    <img class="gemstone" id="gem-2" src="assets/images/if_Emerald_diamond_2647512.png">
-                    <img class="gemstone" id="gem-3" src="assets/images/if_Marquis_diamond_2647510.png">
+                    <img class="gemstone" id="gem-0" src="assets/images/if_Cushion_2647513.png" alt="cushion gem">
+                    <img class="gemstone" id="gem-1" src="assets/images/if_Emerald_2647511.png" alt="emerald gem">
+                    <img class="gemstone" id="gem-2" src="assets/images/if_Emerald_diamond_2647512.png" alt="emerald diamond gem">
+                    <img class="gemstone" id="gem-3" src="assets/images/if_Marquis_diamond_2647510.png" alt="marquis diamond gem">
                 </div>
             </div>
             <div class="col-xs-3 text-center">
